# ImpCodeGenerator

./: .clang-format  .gitignore  .project1_team_A.tar.gz.icloud  .style.yapf  CMakeLists.txt  CMakePresets.json  README.md  assemble.sh  build.sh  collatz.asm  example_main.c  example_op_file.txt  factorial.asm  helper.cmake  install-dependencies.sh  package.sh  testdot.dot
.cache/clangd/index/: ast_printing.hpp.AA714A8C51634440.idx  ast_printing_test.cpp.ABD6E017E6FAACBE.idx  comment.hpp.3546CF1CD5C3448B.idx  copyable_ptr.hpp.BCBAE64CE850D0DD.idx  example.cpp.074D308DF7BB318C.idx  node_id.hpp.E1C416DB8565AD49.idx  printing.hpp.452C5DD6709EAC82.idx  read_file.hpp.B7E4E94300F0E754.idx  scope_guard.hpp.C62B1BA73ADD661D.idx  syntax_types.hpp.CD1AD222E20FA23C.idx  test_imp.cpp.74633EBD23D33606.idx
include/imp/: ast_printing.hpp  comment.hpp  copyable_ptr.hpp  instruction.hpp  print_risc.hpp  printing.hpp  read_file.hpp  syntax_types.hpp  translator.hpp
include/imp/parsers/: arith_expr.hpp  basic_parsers.hpp  bool_expr.hpp  command.hpp
include/imp/util/: node_id.hpp  overload_set.hpp  scope_guard.hpp
intermediate_to_riscv/: cfg.py  cfg_visualize_examples.py  constant_folding.py  constant_folding_example.py  dead_code_elimination.py  dead_code_example_with_folding.py  dead_code_example_without_folding.py  il_to_cfg.ipynb  il_utils.py  liveness_analysis.py  liveness_analysis_example.py  print_risc.ipynb  print_risc.py  print_risc_project2.py  rd_example.py  reaching_definitions.py
jupyter/: print_risc.ipynb  print_risc.py
jupyter/.ipynb_checkpoints/: print_risc-checkpoint.ipynb
programs/: arith.asm  arith.imp  arith.ins  arith.s  arith.vars  bench-count.asm  bench-count.imp  bench-count.ins  bench-count.s  bench-count.vars  bool.imp  collatz.asm  collatz.imp  collatz.ins  collatz.s  collatz.vars  dead-code-test-1.asm  dead-code-test-1.imp  dead-code-test-1.ins  dead-code-test-1.s  dead-code-test-2.asm  dead-code-test-2.imp  dead-code-test-2.ins  dead-code-test-2.s  factorial.asm  factorial.imp  factorial.ins  factorial.s  factorial.vars  fib.asm  fib.imp  fib.ins  fib.s  fib.vars  precedence.imp  test-plus.asm  test-plus.imp  test-plus.ins  test-plus.s  test-plus.vars
programs/dot-files/: arith.cfg.dot  collatz.cfg.dot  dead-code-test-1.cfg.dot  dead-code-test-2.cfg.dot  factorial.cfg.dot  factorial.dot  fib.cfg.dot  precedence.dot
programs/dotfiles/: arith.dot  bool.dot  collatz.dot
riscv/: cfg.py  cfg_visualize_example.py  dead_code_example_with_folding.py  dead_code_example_without_folding.py  fixed_point_iterator.py  il_to_cfg.ipynb  il_utils.py  liveness_analysis.py  print_risc.ipynb  print_risc.py  rd_example.py  visualize_cfg.py
src/: assembler.cpp  ast_printing_example.cpp  ast_printing_test.cpp  example.cpp  print_ast.cpp  print_op_file.cpp
test/: ast_printing_test.cpp  test_imp.cpp
